--- a/Android/PercepT/app/src/main/res/layout/activity_main.xml
+++ b/Android/PercepT/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="kamehameha.beam.percept.ui.MainActivity">
 
     <SurfaceView
@@ -15,5 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/coordinates"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:textColor="@android:color/background_dark"
+        android:text="Hello world"/>
 
 </RelativeLayout>
