--- a/Android/PercepT/app/src/main/res/layout/activity_main.xml
+++ b/Android/PercepT/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context="kamehameha.beam.percept.ui.MainActivity">
 
-    <SurfaceView
+    <kamehameha.beam.percept.camera.CameraCanvas
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 
     <TextView
         android:id="@+id/coordinates"
