final: on touch location reading workign with minor wrong information fetch by the canvas
working/almost working:Camera,AugmentCanvas
not working:orientation, gps, Showing nearby location

--- a/Android/PercepT/app/src/main/res/layout/activity_main.xml
+++ b/Android/PercepT/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <kamehameha.beam.percept.AugmentingBoard.AugmentCanvas
+        android:id="@+id/augment_canvas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <TextView
         android:id="@+id/coordinates"
