--- a/Android/PercepT/app/src/main/res/layout/activity_main.xml
+++ b/Android/PercepT/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,13 @@
         android:layout_below="@id/coordinates"
         android:text="Direction here"/>
 
+    <Button
+        android:id="@+id/capture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Capture"
+        android:onClick="buttonCapture"/>
+
 </RelativeLayout>
